# Proyecto_1_Datos2

./: .gitignore  Proyecto requerimientos
Server/: CMakeLists.txt  Linked_List.hpp  Server  garbage.cpp  garbage.hpp  main  main.cpp  md5.h  socket_S.cpp  socket_S.h  vsptr.hpp  vsptrNT.hpp
Server/JSONFiles/: datos_clientes.json
VSC_ext/: CMakeLists.txt  Linked_List.hpp  garbage.cpp  garbage.hpp  main  main.cpp  socket.cpp  socket.hpp  socket_C.cpp  socket_C.h  socket_C.hpp  socket_S.cpp  socket_S.h  socket_S.hpp  vsptr.cpp  vsptr.hpp  vsptrNT.hpp
VSC_ext/html/: Linked__List_8hpp_source.html  allocators_8h_source.html  annotated.html  biginteger_8h_source.html  classAutoUTFInputStream-members.html  classAutoUTFInputStream.html  classAutoUTFOutputStream-members.html  classAutoUTFOutputStream.html  classBasicIStreamWrapper-members.html  classBasicIStreamWrapper.html  classBasicOStreamWrapper-members.html  classBasicOStreamWrapper.html  classCrtAllocator-members.html  classCrtAllocator.html  classCursorStreamWrapper-members.html  classCursorStreamWrapper.html  classEncodedInputStream-members.html  classEncodedInputStream.html  classEncodedInputStream_3_01UTF8_3_4_00_01MemoryStream_01_4-members.html  classEncodedInputStream_3_01UTF8_3_4_00_01MemoryStream_01_4.html  classEncodedOutputStream-members.html  classEncodedOutputStream.html  classFileReadStream-members.html  classFileReadStream.html  classFileWriteStream-members.html  classFileWriteStream.html  classGarbageCollector-members.html  classGarbageCollector.html  classGenericArray-members.html  classGenericArray.html  classGenericDocument-members.html  classGenericDocument.html  classGenericMember-members.html  classGenericMember.html  classGenericMemberIterator-members.html  classGenericMemberIterator.html  classGenericObject-members.html  classGenericObject.html  classGenericPointer-members.html  classGenericPointer.html  (+267 more)
VSC_ext/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+60 more)
build-VSC_ext-Desktop-Debug/: VSC_ext  VSC_ext.cbp
build-VSC_ext-Desktop-Debug/JSONFiles/: prueba.json
memorym/: CHANGELOG.md  Linked_List.hpp  README.md  conexiones.json  extension.js  garbage.hpp  main.cpp  package-lock.json  package.json  vsptr.hpp
